--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.0",
+    "gsap": "^3.14.2",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "next": "^14.1.0",
