UPDATE - OTP VERIFICATIONS

--- a/.env
+++ b/.env
@@ -276,7 +276,7 @@ DEMO_MODE=true
 # ============================================
 # NOTE: PRODUCTION DEPLOYMENT
 # ============================================
-# For production:
+# For production:em
 # 1. Change NODE_ENV to 'production'
 # 2. Replace all placeholder API keys with real ones
 # 3. Use strong, randomly generated secrets
