--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.13",
     "openai": "^6.17.0",
     "rate-limit-redis": "^4.3.1",
     "redis": "^4.7.1",
@@ -39,8 +41,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^11.0.1",
     "nodemon": "^3.1.11",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   }
 }
