--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.5.0",
+    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.4.0",
-    "framer-motion": "^10.12.0",
+    "framer-motion": "^11.11.17",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
-    "next": "^14.1.0",
+    "next": "^15.1.0",
     "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.7.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "recharts": "^2.13.3",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.3.0",
-    "zustand": "^4.5.7"
+    "three": "^0.182.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
-    "@types/react": "^18.2.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0",
