update - 70 - added IDS

--- a/.env
+++ b/.env
@@ -219,11 +219,6 @@ WEBSOCKET_MAX_CONNECTIONS_PER_USER=5
 # Test Database
 MONGODB_TEST_URI=mongodb://localhost:27017/bond_platform_test
 
-# Demo Accounts (For Hackathon Judges)
-DEMO_ADMIN_EMAIL=admin@bondplatform.demo
-DEMO_ADMIN_PASSWORD=Admin@CIH2026
-DEMO_PREMIUM_EMAIL=premium@bondplatform.demo
-DEMO_PREMIUM_PASSWORD=Premium@CIH2026
 
 # ============================================
 # FEATURE FLAGS
@@ -285,3 +280,24 @@ DEMO_MODE=true
 # 6. Update CORS_ORIGIN to production domain
 # 7. Configure proper monitoring and alerts
 # ============================================
+
+
+
+
+
+# Demo Accounts (For Hackathon Judges)
+DEMO_ADMIN_EMAIL=admin@bondplatform.demo
+DEMO_ADMIN_PASSWORD=Admin@CIH2026
+
+
+DEMO_REATILS_EMAIL=retail@mudra.com
+DEMO_REATILS_PASSWORD=Retail@CIH2026
+
+DEMO_INSTITUTION_EMAIL=institution@mudra.demo
+DEMO_INSTITUTION_PASSWORD=Inst@CIH2026
+
+DEMO_GOVERNMENT_EMAIL=government@mudra.demo
+DEMO_GOVERNMENT_PASSWORD=Gov@CIH2026
+
+DEMO_PREMIUM_EMAIL=premium@bondplatform.demo
+DEMO_PREMIUM_PASSWORD=Premium@CIH2026
