--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,9 +7,10 @@ MONGODB_URI=mongodb://localhost:27017/bond_platform
 REDIS_URL=redis://localhost:6379
 
 # Authentication
-JWT_SECRET=your_super_secret_jwt_key_minimum_32_characters_long
+# Generate secure keys: openssl rand -hex 32
+JWT_SECRET=REPLACE_WITH_SECURE_64_CHAR_KEY_USE_OPENSSL_RAND_HEX_32_TO_GENERATE
 JWT_EXPIRY=1h
-JWT_REFRESH_SECRET=your_refresh_token_secret_minimum_32_characters
+JWT_REFRESH_SECRET=REPLACE_WITH_SECURE_64_CHAR_KEY_USE_OPENSSL_RAND_HEX_32_TO_GENERATE
 JWT_REFRESH_EXPIRY=7d
 BCRYPT_ROUNDS=10
 
