--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,3 +1,8 @@
+# API Configuration
+NEXT_PUBLIC_API_URL=http://localhost:3210/api/v1
+NEXT_PUBLIC_SOCKET_URL=http://localhost:3210
+
+# EmailJS Configuration (will be moved to backend)
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=Murda Fintech Pvt. Ltd
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_o8t1s57
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=W5i--RPJxCCsgUiXg
